Sample table overflow bug fixed

--- a/metabolights-webapps/src/main/webapp/css/metabolights.css
+++ b/metabolights-webapps/src/main/webapp/css/metabolights.css
@@ -404,3 +404,6 @@ a:link.btn-ok{
 .mini--banner{
 
 }
+
+.ml--oh{overflow: auto;
+    overflow-y: hidden;}
